--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                 <div class="skill-category">
                     <h3>Languages</h3>
                     <div class="skill-logos">
-                        <img src="logo\python.png" alt="Python">
-                        <img src="logo\javascript.jpeg" alt="JavaScript">
-                        <img src="logo\threejs.png" alt="Three.js">
-                        <img src="logo\c++.jpeg" alt="C++">
-                        <img src="logo\html.png" alt="HTML">
-                        <img src="logo\css.jpeg" alt="CSS">
+                        <img src="/logo/python.png" alt="Python">
+                        <img src="/logo/javascript.jpeg" alt="JavaScript">
+                        <img src="/logo/threejs.png" alt="Three.js">
+                        <img src="/logo/c++.jpeg" alt="C++">
+                        <img src="/logo/html.png" alt="HTML">
+                        <img src="/logo/css.jpeg" alt="CSS">
                     </div>
                 </div>
                 <div class="skill-category">
